--- a/11 - Custom Video Player/style.css
+++ b/11 - Custom Video Player/style.css
@@ -72,6 +72,7 @@ body {
   transition: all .3s;
   flex-wrap: wrap;
   background: rgba(0,0,0,0.1);
+  transform: translateY(0);
 }
 
 .player:hover .player__controls {
